# outreach

./: .env.example  .gitignore  AGENT.md  README.md  pyproject.toml
data/: 2026 Camp Outreach Doc - Regions.csv  regions.csv
docs/: 01_introduction.md  02_architecture.md  03_code_walkthrough.md  04_testing_guide.md
outreach/: agents.py  config.py  io.py  main.py  models.py  prompts.py  search.py
outreach.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
outreach/outreach.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: generate_regions.py  test_evt.py
src/: main.py
tests/: test_agents.py  test_io.py  test_main.py  test_models.py  test_search.py
