[project]
name = "outreach"
version = "0.1.0"
requires-python = ">=3.11, <3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "google-adk",
    "json-repair",
    "lxml>=6.0.2",
    "pandas>=3.0.1",
    "pydantic",
    "python-dotenv",
    "requests>=2.32.5",
]

[project.scripts]
outreach = "outreach.main:main_cli"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.uv]
package = true

[tool.setuptools]
packages = ["outreach"]
